--- a/css/typography.css
+++ b/css/typography.css
@@ -43,8 +43,9 @@ h4 {
   text-align: center;
 }
 
+/** phone */
 @media (max-width: 767px) {
-  h1 { font-size: 6.0rem; }
+  h1 { font-size: 5.5rem; }
   h2 {
     font-size: 5.0rem;
     font-weight: 300;
@@ -54,6 +55,7 @@ h4 {
     padding: 0.8rem 1.0rem;
   }
 }
+/** tablet */
 @media (min-width: 768px) and (max-width: 959px) {
   h1 { font-size: 14.0rem; }
   h2 { font-size: 12.0rem; }
@@ -66,7 +68,7 @@ h4 {
 
 /** PARAGRAPHS */
 p {
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   font-weight: 300;
   padding: 1.3em 0 0.2em;
   margin: 0;
